[package]
name = "actix-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-web = "4"
jsonwebtoken = "9.3.0"
reqwest = { version = "0.12.3", features = ["blocking", "json"] }
serde = "1.0.197"
serde_json = "1.0.115"
